--- a/index.html
+++ b/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba Github</title>
+    <title>Monster Hunter Anniversary</title>
+    <link rel="stylesheet" href="estilos/estilo_mh.css">
+    <link href="https://fonts.cdnfonts.com/css/monster-hunter" rel="stylesheet">
 </head>
 <body>
-    <h1>Esta web está en Github</h1>
+    <nav>
+        <a href="#first_div">Inicio</a>
+        <a href="#monstruos">Monstruos</a>
+        <a href="#novedades">Novedades</a>
+        <img id="logo20" src="assets/mh_20th.png" alt="logo monster hunter">
+    </nav>
+
+    <div id="first_div"><br>
+        <img id="mainlogo" src="assets/Monster-Hunter-Logo-2004.png" alt="monster hunter logo">
+        <h1 id>BIENVENIDO Al MUNDO DE <br>MONSTER HUNTER</h1>
+        <p>2024 marca el 20 aniversario de <b>Monster Hunter</b>, una de las franquicias más populares en la actualidad del videojuego. Su estilo de juego único, que auna elementos de RPG, acción y caza de criaturas, lo han convertido en una experiencia que todo jugador que se precie debe vivir de primera mano.</p><br>
+    </div>
+
+    <div id="felyne">
+        <a href="paginas/contacto.html"><img src="assets/felyne_contact1.png" alt="felyne"></a>
+    </div>
+
+    <div id="second_div">
+        <img id="cover" src="assets/mh_portada.png" alt="cazadores">
+        <p class="text_secondiv">El primer Monster Hunter fue lanzado en exclusiva para la consola SONY PlayStation 2, y fue la punta de lanza de los juegos multijugador en la misma. <b>Capcom</b>, la empresa desarrolladora, buscaba crear una nueva franquicia con un fuerte componente multijugador, enfocado particularmente al juego online.</p>
+        <p class="text_secondiv">Aunque esta primera entrega era algo tosca, ya presentaba las bondades que han encumbrado a esta franquicia de videojuegos hasta su posición actual: un esquema de juego único y adictivo consistente en cazar peligrosas criaturas y forjar equipo con sus materiales, con el fin de cazar nuevas criaturas aún más poderosas.</p>
+    </div>
+    
+    <div class="body_divs" id="monstruos">
+        <br><br>
+        <h2>Monstruos</h2>
+        <img class="monstruos_derecha" src="assets/rathalos_png.webp" alt="rathalos"><br><br>
+        <p class="title_izquierda">Rathalos</p>
+        <p class="text_izquierda">Wyverns terribles llamados "Reyes de los Cielos". Con ayuda de las Rathian, cercan territorios amplios centrados en sus nidos. El Rathalos desciende sobre los invasores con garras envenenadas y aliento de fuego.</p>
+    </div>
+    <div class="body_divs">
+        <br><br>
+        <img class="monstruos_izquierda" src="assets/rathian png.webp" alt="rathian"><br><br>
+        <p class="title_derecha">Rathian</p>
+        <p class="text_derecha">Wyverns hembras que lanzan fuego también denominadas "Reinas de la tierra". De patas poderosas y cola venenosa, suelen cazar en tierra. Las Rathian a veces cazan en pareja con un Rathalos, con los que parecen coordinar sus ataques.</p>
+    </div>
+    <div class="body_divs">
+        <br><br>
+        <img class="monstruos_derecha" src="assets/fatalis_png.png" alt="fatalis"><br><br>
+        <p class="title_izquierda">Fatalis</p>
+        <p class="text_izquierda">Las leyendas sobre este dragón se remontan a la antiguedad. Mucho son los cazadores que han intentado desafiarlo, pero ninguno de ellos ha
+            sobrevivido. Un monstruo rodeado de misterio.</p>
+    </div>
+    <div class="body_divs">
+        <br><br>
+        <img class="monstruos_izquierda" src="assets/zinogre_png.webp" alt="zinogre"><br><br>
+        <p class="title_derecha">Zinogre</p>
+        <p class="text_derecha">Wyverns de colmillos cuyos cuerpos están recubiertos de electricidad. Sus afiladas garras y fuertes patas les permiten crecer en terreno de montaña. Durante la caza, reúnen numerosos bichos eléctricos para potenciarse a sí mismos y entrar en estado de supercarga.</p>
+    </div>
+    <div class="body_divs">
+        <br><br>
+        <img class="monstruos_derecha" src="assets/nergigante_png.webp" alt="nergigante"><br><br>
+        <p class="title_izquierda">Nergigante</p>
+        <p class="text_izquierda">	Un terrible dragón anciano que aparece cuando hay otros dragones ancianos en las cercanías. Se ha documentado ampliamente su pasión por la destrucción.</p>
+    </div>
+    <div class="body_divs">
+        <br><br>
+        <img class="monstruos_izquierda" src="assets/malzeno_png.webp" alt="malzeno"><br><br>
+        <p class="title_derecha">Malzeno</p>
+        <p class="text_derecha">Un dragón cubierto de elegantes escamas plateadas. Utiliza el Qurio para drenar la energía vital de otros seres vivos, arrastrándose por la noche y atacando a sus presas por la espalda.</p>
+    </div><br><br>
+
+    <div class="novedades_div" id="novedades">
+        <br><br>
+        <h2>Novedades</h2>
+        <img src="assets/wilds_logo.png" alt="Monster Hunter Wilds logo">
+        <p>Tus cacerías continúan con Monster Hunter Wilds, la entrega más nueva de la saga Monster Hunter, aún en desarrollo. Vive la experiencia más puntera de cualquier juego de cacerías de acción. <br><br>Lanzamiento previsto para 2025.</p>
+    </div>
+    <img id="poogie" src="assets/MH3-Render_Poogie_004.webp" alt="poogie">
 </body>
 </html>
